commit by anurag

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title> TechNewbies</title>
-        <link rel="icon" type="image/png" href="./image/logo.png"/>
+    <link rel="icon" type="image/png" href="./image/logo.png" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,7 +34,7 @@
         <div class="nav">
             <a href="courses.html"><span>Explore Courses</span></a>
             <a href="live.html"><span>Live</span></a>
-            <a href="about.html"><span>About us</span></a>
+            <a href="about.html" style="color: #007bff"><span>About us</span></a>
             <a href="contact.html"><span>Contact us</span></a>
             <a href="#">Log out</a>
             <div class="user-btn"><i class="fa-solid fa-user user-btn-icon"></i></div>
@@ -52,7 +52,190 @@
         </div>
     </div>
     <!--header section ends-->
-    
+    <!--About section starts-->
+    <section class="about-us-section">
+        <!--about section starts-->
+        <section class="about">
+            <div class="row">
+                <div class="image">
+                    <img src="./image/joinUSimg.png" alt="">
+                </div>
+                <div class="content">
+                    <h4>WHY CHOOSE US?</h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione veritatis non odio est at
+                        obcaecati!</p>
+                    <a href="courses.html" class="inline-btn">Our Courses</a>
+                </div>
+            </div>
+            <div class="about-box-container">
+
+                <div class="about-box">
+                    <i class="fas fa-graduation-cap"></i>
+                    <div>
+                        <h3>+1k</h3>
+                        <span>online courses</span>
+                    </div>
+                </div>
+
+                <div class="about-box">
+                    <i class="fas fa-user-graduate"></i>
+                    <div>
+                        <h3>+25k</h3>
+                        <span>Brilliant Students</span>
+                    </div>
+                </div>
+
+                <div class="about-box">
+                    <i class="fas fa-chalkboard-user"></i>
+                    <div>
+                        <h3>+5k</h3>
+                        <span>Expert Teachers</span>
+                    </div>
+                </div>
+
+                <div class="about-box">
+                    <i class="fas fa-briefcase"></i>
+                    <div>
+                        <h3>100%</h3>
+                        <span>Job PLacement</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--about section ends-->
+        <!--review section starts-->
+        <section class="reviews">
+
+            <h1 class="heading reviews-heading">Student's reviews</h1>
+            <div class="about-box-container">
+
+                <div class="about-box">
+
+                    <div class="user">
+                        <img src="./image/profilepic01.png" alt="">
+                        <div>
+                            <h3>Yaghyapran Chouksey</h3>
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, iusto.</p>
+                </div>
+                <div class="about-box">
+
+                    <div class="user">
+                        <img src="./image/profilepic01.png" alt="">
+                        <div>
+                            <h3>Yaghyapran Chouksey</h3>
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, iusto.</p>
+                </div>
+                <div class="about-box">
+
+                    <div class="user">
+                        <img src="./image/profilepic01.png" alt="">
+                        <div>
+                            <h3>Yaghyapran Chouksey</h3>
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, iusto.</p>
+                </div>
+                <div class="about-box">
+
+                    <div class="user">
+                        <img src="./image/profilepic01.png" alt="">
+                        <div>
+                            <h3>Yaghyapran Chouksey</h3>
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, iusto.</p>
+                </div>
+                <div class="about-box">
+
+                    <div class="user">
+                        <img src="./image/profilepic01.png" alt="">
+                        <div>
+                            <h3>Yaghyapran Chouksey</h3>
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, iusto.</p>
+                </div>
+                <div class="about-box">
+
+                    <div class="user">
+                        <img src="./image/profilepic01.png" alt="">
+                        <div>
+                            <h3>Yaghyapran Chouksey</h3>
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, iusto.</p>
+                </div>
+                <div class="about-box">
+
+                    <div class="user">
+                        <img src="./image/profilepic01.png" alt="">
+                        <div>
+                            <h3>Yaghyapran Chouksey</h3>
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, iusto.</p>
+                </div>
+
+
+            </div>
+        </section>
+        <!--review section ends-->
+    </section>
+    <!--about section ends-->
+
 </body>
 
 </html>
