--- a/community.html
+++ b/community.html
@@ -40,10 +40,10 @@
             <div class="sidebar-chats">
                 <div class="sidebar-chat">
                     <div class="chat-avatar">
-                        <img src="./image/avatar.png" alt="">
+                        <img src="./image/webdevcommunity.jpg" alt="">
                     </div>
                     <div class="chat-info">
-                        <h4>Mike Daisan</h4>
+                        <h4>Web Development Community</h4>
                         <p>Last Message</p>
                     </div>
                     <div class="time">
@@ -52,10 +52,10 @@
                 </div>
                 <div class="sidebar-chat">
                     <div class="chat-avatar">
-                        <img src="./image/avatar.png" alt="">
+                        <img src="./image/backendcommunity.jpg" alt="">
                     </div>
                     <div class="chat-info">
-                        <h4>Amelia Cuiree</h4>
+                        <h4>Backend Community</h4>
                         <p>Last Message</p>
                     </div>
                     <div class="time">
@@ -64,10 +64,10 @@
                 </div>
                 <div class="sidebar-chat">
                     <div class="chat-avatar">
-                        <img src="./image/avatar.png" alt="">
+                        <img src="./image/aicommunity.webp" alt="">
                     </div>
                     <div class="chat-info">
-                        <h4>Mike Daisan</h4>
+                        <h4>AI Community</h4>
                         <p>Last Message</p>
                     </div>
                     <div class="time">
@@ -76,10 +76,10 @@
                 </div>
                 <div class="sidebar-chat">
                     <div class="chat-avatar">
-                        <img src="./image/avatar.png" alt="">
+                        <img src="./image/datasciencecommunity.webp" alt="">
                     </div>
                     <div class="chat-info">
-                        <h4>Mike Daisan</h4>
+                        <h4>Data Science Community</h4>
                         <p>Last Message</p>
                     </div>
                     <div class="time">
@@ -88,10 +88,10 @@
                 </div>
                 <div class="sidebar-chat">
                     <div class="chat-avatar">
-                        <img src="./image/avatar.png" alt="">
+                        <img src="./courses/Reactthumbnail.webp" alt="">
                     </div>
                     <div class="chat-info">
-                        <h4>Mike Daisan</h4>
+                        <h4>React Community</h4>
                         <p>Last Message</p>
                     </div>
                     <div class="time">
@@ -100,76 +100,17 @@
                 </div>
                 <div class="sidebar-chat">
                     <div class="chat-avatar">
-                        <img src="./image/avatar.png" alt="">
+                        <img src="./image/javaBlack.png" alt="">
                     </div>
                     <div class="chat-info">
-                        <h4>Mike Daisan</h4>
+                        <h4>Java Programming Community</h4>
                         <p>Last Message</p>
                     </div>
                     <div class="time">
                         <p>2:44 pm</p>
                     </div>
                 </div>
-                <div class="sidebar-chat">
-                    <div class="chat-avatar">
-                        <img src="./image/avatar.png" alt="">
-                    </div>
-                    <div class="chat-info">
-                        <h4>Mike Daisan</h4>
-                        <p>Last Message</p>
-                    </div>
-                    <div class="time">
-                        <p>2:44 pm</p>
-                    </div>
-                </div>
-                <div class="sidebar-chat">
-                    <div class="chat-avatar">
-                        <img src="./image/avatar.png" alt="">
-                    </div>
-                    <div class="chat-info">
-                        <h4>Mike Daisan</h4>
-                        <p>Last Message</p>
-                    </div>
-                    <div class="time">
-                        <p>2:44 pm</p>
-                    </div>
-                </div>
-                <div class="sidebar-chat">
-                    <div class="chat-avatar">
-                        <img src="./image/avatar.png" alt="">
-                    </div>
-                    <div class="chat-info">
-                        <h4>Mike Daisan</h4>
-                        <p>Last Message</p>
-                    </div>
-                    <div class="time">
-                        <p>2:44 pm</p>
-                    </div>
-                </div>
-                <div class="sidebar-chat">
-                    <div class="chat-avatar">
-                        <img src="./image/avatar.png" alt="">
-                    </div>
-                    <div class="chat-info">
-                        <h4>Mike Daisan</h4>
-                        <p>Last Message</p>
-                    </div>
-                    <div class="time">
-                        <p>2:44 pm</p>
-                    </div>
-                </div>
-                <div class="sidebar-chat">
-                    <div class="chat-avatar">
-                        <img src="./image/avatar.png" alt="">
-                    </div>
-                    <div class="chat-info">
-                        <h4>Mike Daisan</h4>
-                        <p>Last Message</p>
-                    </div>
-                    <div class="time">
-                        <p>2:44 pm</p>
-                    </div>
-                </div>
+                
 
             </div>
         </div>
@@ -177,10 +118,10 @@
             <div class="header2">
                 <div class="chat-title">
                     <div class="avatar">
-                        <img src="./image/avatar.png" alt="">
+                        <img src="./image/backendcommunity.jpg" alt="">
                     </div>
                     <div class="message-header-content">
-                        <h4>Amelia Cuiree</h4>
+                        <h4>Backend Community</h4>
                         <p>online</p>
                     </div>
                 </div>
