--- a/live.html
+++ b/live.html
@@ -33,7 +33,7 @@
 
         <div class="nav">
             <a href="courses.html"><span>Explore Courses</span></a>
-            <a href="live.html"><span>Live</span></a>
+            <a href="live.html" style="color: #007bff"><span>Live</span></a>
             <a href="about.html"><span>About us</span></a>
             <a href="contact.html"><span>Contact us</span></a>
             <a href="#">Log out</a>
@@ -57,49 +57,49 @@
         <h1 class="heading">Web Development Courses (Front-end Development)</h1>
         <div class="box-container">
             <div class="box">
-                <img src="./courses/HTMLthumbnail.png" class="thumb" alt="">
+                <img src="./image/webdevcommunity.jpg" class="thumb" alt="">
                 <h3 class="title">Web Development Community</h3>
                 <span>75 members</span>
                 <a href="community.html" class="inline-btn">Join Comminity</a>
             </div>
             <div class="box">
-                <img src="./courses/HTMLthumbnail.png" class="thumb" alt="">
+                <img src="./image/backendcommunity.jpg" class="thumb" alt="">
                 <h3 class="title">Backend Community</h3>
                 <span>75 members</span>
                 <a href="community.html" class="inline-btn">Join Comminity</a>
             </div>
             <div class="box">
-                <img src="./courses/HTMLthumbnail.png" class="thumb" alt="">
+                <img src="./image/aicommunity1.webp" class="thumb" alt="">
                 <h3 class="title">AI Community</h3>
                 <span>75 members</span>
                 <a href="community.html" class="inline-btn">Join Comminity</a>
             </div>
             <div class="box">
-                <img src="./courses/HTMLthumbnail.png" class="thumb" alt="">
+                <img src="./image/datasciencecommunity.webp" class="thumb" alt="">
                 <h3 class="title">Data Science Community</h3>
                 <span>75 members</span>
                 <a href="community.html" class="inline-btn">Join Comminity</a>
             </div>
             <div class="box">
-                <img src="./courses/HTMLthumbnail.png" class="thumb" alt="">
+                <img src="./image/reactcommunity.png" class="thumb" alt="">
                 <h3 class="title">React Community</h3>
                 <span>75 members</span>
                 <a href="community.html" class="inline-btn">Join Comminity</a>
             </div>
             <div class="box">
-                <img src="./courses/HTMLthumbnail.png" class="thumb" alt="">
+                <img src="./image/javacommunity.webp" class="thumb" alt="">
                 <h3 class="title">Java Programming Community</h3>
                 <span>75 members</span>
                 <a href="community.html" class="inline-btn">Join Comminity</a>
             </div>
             <div class="box">
-                <img src="./courses/HTMLthumbnail.png" class="thumb" alt="">
+                <img src="./image/dsacommunities.jpg" class="thumb" alt="">
                 <h3 class="title">DSA Community</h3>
                 <span>75 members</span>
                 <a href="community.html" class="inline-btn">Join Comminity</a>
             </div>
             <div class="box">
-                <img src="./courses/HTMLthumbnail.png" class="thumb" alt="">
+                <img src="./image/jscommunity.png" class="thumb" alt="">
                 <h3 class="title">JavaScript Community</h3>
                 <span>75 members</span>
                 <a href="community.html" class="inline-btn">Join Comminity</a>
@@ -109,12 +109,12 @@
             <h1 class="heading">Upcoming Workshps/Projects</h1>
             <div class="box-container">
                 <div class="box">
-                    <img src="./courses/HTMLthumbnail.png" class="thumb" alt="">
+                    <img src="./image/dataminingcommunity.jpg" class="thumb" alt="">
                     <h3 class="title">Lecture: Data Mining</h3>
                     <a href="#" class="inline-btn">Join</a>
                 </div>
                 <div class="box">
-                    <img src="./courses/HTMLthumbnail.png" class="thumb" alt="">
+                    <img src="./image/cssproject.jpg" class="thumb" alt="">
                     <h3 class="title">CSS Minor Project</h3>
                     <a href="#" class="inline-btn">Join</a>
                 </div>
