--- a/playlist.html
+++ b/playlist.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title> TechNewbies</title>
-        <link rel="icon" type="image/png" href="./image/logo.png"/>
+    <link rel="icon" type="image/png" href="./image/logo.png" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,7 +32,7 @@
         </div>
 
         <div class="nav">
-            <a href="courses.html"><span>Explore Courses</span></a>
+            <a href="courses.html style="color: #007bff""><span>Explore Courses</span></a>
             <a href="live.html"><span>Live</span></a>
             <a href="about.html"><span>About us</span></a>
             <a href="contact.html"><span>Contact us</span></a>
@@ -59,9 +59,9 @@
 
         <div class="row">
             <div class="col">
-                
+
                 <div class="thumb">
-                    <span>6 videos</span>
+                    <span>8 videos</span>
                     <img src="./image/HTMLthumbnail.png" alt="">
                 </div>
                 <form action="" method="post" class="save-list">
@@ -85,8 +85,6 @@
                         <br><br>
                         In this HTML tutorial, you will learn how to use HTML to create and style web pages. You will
                         start with HTML fundamentals, such as basic HTML tags and their attributes, classes, layout.
-                        Then, you will move on to advanced HTML5 topics, such as HTML forms, media,
-                        APIs, and more. By the end of this tutorial, you will have a solid foundation in HTML.
                     </p>
                     <div class="date"><i class="fa fa-calendar"></i><span>21-07-2024</span></div>
                 </div>
@@ -96,42 +94,45 @@
     <!--playlist section ends-->
     <!--video container section starts-->
     <section class="videos-container">
-        <h1 class="heading">PLaylist Details</h1>
+        <h1 class="video-heading">PLaylist Details</h1>
         <div class="box-container">
+            <div class="box">
+                <img src="./courses/HTMLthumbnail.png" class="thumb" alt="">
+                <h3 class="title">HTML Tutorial</h3>
+                <a href="watch-video.html" class="inline-btn">Play video</a>
+            </div>
 
-            <a href="watch-video.html" class="box">
-                <i class="fas fa-play"></i>
-                <img src="./image/HTMLthumbnail.png" alt="">
-                <h3>Complete HTML tutorial -Part 1</h3>
-            </a>
+            <div class="box">
 
-            <a href="watch-video.html" class="box"> <i class="fas fa-play"></i>
-                <img src="./image/HTMLthumbnail.png" alt="">
-                <h3>Complete HTML tutorial -Part 2</h3>
-            </a>
+                <img src="./courses/CSSthumbnail.png" class="thumb" alt="">
+                <h3 class="title">CSS Tutorial</h3>
+                <a href="watch-video.html" class="inline-btn">Play video</a>
+            </div>
 
-            <a href="watch-video.html" class="box">
-                <i class="fas fa-play"></i>
-                <img src="./image/HTMLthumbnail.png" alt="">
-                <h3>Complete HTML tutorial -Part 3</h3>
-            </a>
-            <a href="watch-video.html" class="box">
-                <i class="fas fa-play"></i>
-                <img src="./image/HTMLthumbnail.png" alt="">
-                <h3>Complete HTML tutorial -Part 4</h3>
-            </a>
+            <div class="box">
+                <img src="./courses/JSthubnail.jpeg" class="thumb" alt="">
+                <h3 class="title">JavaScript Tutorial</h3>
+                <a href="watch-video.html" class="inline-btn">Play video</a>
+            </div>
 
-            <a href="watch-video.html" class="box">
-                <i class="fas fa-play"></i>
-                <img src="./image/HTMLthumbnail.png" alt="">
-                <h3>Complete HTML tutorial -Part 5</h3>
-            </a>
+            <div class="box">
+                <img src="./courses/BootStrapthubnail.png" class="thumb" alt="">
+                <h3 class="title">Bootstrap Tutorial</h3>
+                <a href="watch-video.html" class="inline-btn">Play video</a>
+            </div>
 
-            <a href="watch-video.html" class="box">
-                <i class="fas fa-play"></i>
-                <img src="./image/HTMLthumbnail.png" alt="">
-                <h3>Complete HTML tutorial -Part 6</h3>
-            </a>
+            <div class="box">
+
+                <img src="./courses/CSSthumbnail.png" class="thumb" alt="">
+                <h3 class="title">CSS Tutorial</h3>
+                <a href="watch-video.html" class="inline-btn">Play video</a>
+            </div>
+
+            <div class="box">
+                <img src="./courses/JSthubnail.jpeg" class="thumb" alt="">
+                <h3 class="title">JavaScript Tutorial</h3>
+                <a href="watch-video.html" class="inline-btn">Play video</a>
+            </div>
         </div>
     </section>
 
