commit by anurag

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     <!--header section starts-->
     <div class="header">
         <div class="logo">
-            <a href="index.html">TechNewbie</a>
+            <a href="index.html">TechNewbies</a>
             <form action="" method="post" class="search-form">
                 <input type="text" name="search_box" placeholder="search courses..." required>
                 <button type="submit" class="fas fa-search" name="search_box"></button>
